meny list in katalog section

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Kanske ändra på hamburgarmenyn. Fullscreen? Kanske även lägger footer i hamburgarmenyn när den är i fullscreen. -->
+<!-- Fixa hamburgarmenyn för mobilsidan. kundservice får inte plats. Kanske därför är det bättre att bara ha det i fullscreen. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
