--- a/kok.html
+++ b/kok.html
@@ -33,13 +33,19 @@
             <!-- Hur fungerar listor som inte är på nav-taggen -->
             <div class="produkt_meny">
                 <ul class="produkt_list">
-                <li><a class="produkt_item" href=""></a>Köksutrustning</li>
+                <li><a class="produkt_item" href="">Köksutrustning</a></li>
 
-                <li><a class="produkt_item" href=""></a>Köksskåpsinredning</li>
+                <li><a class="produkt_item" href="">Köksskåpsinredning</a></li>
 
-                <li><a class="produkt_item" href=""></a>Vitvaror</li>
+                <li><a class="produkt_item" href="">Vitvaror</a></li>
                 </ul>
             </div>
+
+            <section class="produkt_list_item1">Köksutrustning</section>
+
+            <section class="produkt_list_item2">Köksskåpsinredning</section>
+
+            <section class="produkt_list_item3">Vitvaror</section>
 
             <section class="produkt_1"><h2>Produkt 1</h2>
                 <img src="img/kok_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger">
