--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -30,13 +30,20 @@
     <main>
         <div class="inner_grid">
             <div class="inner_grid_produkter">
+                <!-- Kanske ta bort denna listan för desktop versionen och skapa en layout av 3 grids med bilder och text likt alla andra grids. -->
                 <div class="produkt_meny">
                     <ul class="produkt_list">
-                        <li><a class="produkt_item" href="">Köksutrustning</a></li>
-                        <li><a class="produkt_item" href="">Köksskåpsinredning</a></li>
-                        <li><a class="produkt_item" href="">Vitvaror</a></li>
+                        <li><a class="produkt_item" href="">Soffor</a></li>
+                        <li><a class="produkt_item" href="">Inredning</a></li>
+                        <li><a class="produkt_item" href="">Hyllor</a></li>
                     </ul>
                 </div>
+
+                <section class="produkt_list_item1">Soffor</section>
+
+                <section class="produkt_list_item2">Inredning</section>
+
+                <section class="produkt_list_item3">Hyllor</section>
 
                 <section class="produkt_1">
                     <a href="produkt.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
