nya sidor, hamburgermeny

--- a/v_produkt_2.html
+++ b/v_produkt_2.html
@@ -31,11 +31,11 @@
         <div class="grid_produkt_info">
 
             <section id="produkt">
-                <img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den">
+                <img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En grå soffa med kuddar med olika färger på den">
             </section>
             <!-- Vill försöka lägga till en lista av ikoner och en lägg i varukorg -->
             <section id="produkt_beskrivning">
-                <h2>Grå soffa</h2><h3>2500 kr</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi commodi reprehenderit similique, odio quos possimus ducimus doloremque magni animi assumenda modi unde! Ullam quam asperiores tempora iste quasi atque illum sint obcaecati voluptates dolores exercitationem soluta, consequatur esse architecto dicta debitis molestias deleniti recusandae at nesciunt. Placeat pariatur esse, eligendi dolores inventore accusantium amet corrupti ipsa sit aut at libero laborum consequuntur adipisci fugit blanditiis! Repellendus quasi voluptatum nemo in cupiditate quis dolorum accusamus, tempora dolore expedita? Cumque sit dicta odio praesentium, rem exercitationem quae inventore numquam! Natus beatae itaque harum libero eveniet et vero quo earum necessitatibus? Corrupti, ab.</p><div id="text_box"><h4>Lägg till i varukorg</h4></div>
+                <h2>Grå soffa</h2><h3>7 500 kr</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi commodi reprehenderit similique, odio quos possimus ducimus doloremque magni animi assumenda modi unde! Ullam quam asperiores tempora iste quasi atque illum sint obcaecati voluptates dolores exercitationem soluta, consequatur esse architecto dicta debitis molestias deleniti recusandae at nesciunt. Placeat pariatur esse, eligendi dolores inventore accusantium amet corrupti ipsa sit aut at libero laborum consequuntur adipisci fugit blanditiis! Repellendus quasi voluptatum nemo in cupiditate quis dolorum accusamus, tempora dolore expedita? Cumque sit dicta odio praesentium, rem exercitationem quae inventore numquam! Natus beatae itaque harum libero eveniet et vero quo earum necessitatibus? Corrupti, ab.</p><div id="text_box"><h4>Lägg i varukorg</h4></div>
             </section>
 
         </div>
