--- a/v_produkt_3.html
+++ b/v_produkt_3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laque - Kök</title>
+    <title>Laque - Produkt</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -27,36 +27,17 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <main>
-        <div class="inner_grid_produkter">
-            <!-- Vad ska jag kalla klasserna för kök menyn och när ska man använda  -->
-            <!-- Hur fungerar listor som inte är på nav-taggen -->
-            <div class="produkt_meny">
-                <ul class="produkt_list">
-                <li><a class="produkt_item" href="">Köksutrustning</a></li>
+    <main >
+        <div class="grid_produkt_info">
 
-                <li><a class="produkt_item" href="">Köksskåpsinredning</a></li>
-
-                <li><a class="produkt_item" href="">Vitvaror</a></li>
-                </ul>
-            </div>
-
-            <section class="produkt_list_item1">Köksutrustning</section>
-
-            <section class="produkt_list_item2">Köksskåpsinredning</section>
-
-            <section class="produkt_list_item3">Vitvaror</section>
-
-            <section class="produkt_1">
-                <a href="k_produkt_1.html"><h2>Produkt 1</h2><img src="img/kok_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger"></a>
-                
+            <section id="produkt">
+                <img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En grå soffa med kuddar med olika färger på den">
             </section>
-            <section class="produkt_2">
-                <a href="k_produkt_2.html"><h2>Produkt 2</h2> <img src="img/kok_produkt_2.jpg" alt="En hylla för köksredskap eller tallrikar"></a>
+            <!-- Vill försöka lägga till en lista av ikoner och en lägg i varukorg -->
+            <section id="produkt_beskrivning">
+                <h2>Svart soffa</h2><h3>5 000 kr</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi commodi reprehenderit similique, odio quos possimus ducimus doloremque magni animi assumenda modi unde! Ullam quam asperiores tempora iste quasi atque illum sint obcaecati voluptates dolores exercitationem soluta, consequatur esse architecto dicta debitis molestias deleniti recusandae at nesciunt. Placeat pariatur esse, eligendi dolores inventore accusantium amet corrupti ipsa sit aut at libero laborum consequuntur adipisci fugit blanditiis! Repellendus quasi voluptatum nemo in cupiditate quis dolorum accusamus, tempora dolore expedita? Cumque sit dicta odio praesentium, rem exercitationem quae inventore numquam! Natus beatae itaque harum libero eveniet et vero quo earum necessitatibus? Corrupti, ab.</p><div id="text_box"><h4>Lägg i varukorg</h4></div>
             </section>
-            <section class="produkt_3">
-                <a href="k_produkt_3.html"><h2>Produkt 3</h2><img src="img/kok_produkt_3.jpg" alt="Ett bord med svart stolar runtom"></a>
-            </section>
+
         </div>
     </main>
 
