--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -46,13 +46,15 @@
                 <section class="produkt_list_item3">Hyllor</section>
 
                 <section class="produkt_1">
-                    <a href="produkt.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
+                    <a href="v_produkt_1.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
                 </section>
-                <section class="produkt_2"><h2>Produkt 2</h2>
-                    <img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En vit grå soffa med vit, gråa kuddar.">
+                <section class="produkt_2">
+                    <a href="v_produkt_2.html"><h2>Produkt 2</h2><img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En vit grå soffa med vit, gråa kuddar."></a>
+                    
                 </section>
-                <section class="produkt_3"><h2>Produkt 3</h2>
-                    <img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa">
+                <section class="produkt_3">
+                    <a href="v_produkt_3.html"><h2>Produkt3</h2><img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa"></a>
+                    
                 </section>
             </div>
         </div>
