Ändrat på viewport och text i kok.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!-- Kanske ändra på hamburgarmenyn. Fullscreen? Kanske även lägger footer i hamburgarmenyn när den är i fullscreen. -->
 <!-- Fixa hamburgarmenyn för mobilsidan. kundservice får inte plats. Kanske därför är det bättre att bara ha det i fullscreen. -->
-<!-- Ändra på layouten för texten i index känns lite som att den är där bara för att -->
+<!-- Ändra på layouten förtexten i index känns lite som att den är där bara för att -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width">
     <title>Laque</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
