--- a/kok.html
+++ b/kok.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width">
     <title>Laque - Kök</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -33,9 +34,9 @@
             <!-- Hur fungerar listor som inte är på nav-taggen -->
             <div class="produkt_meny">
                 <ul class="produkt_list">
-                <li><a class="produkt_item" href="">Köksutrustning</a></li>
+                <li><a class="produkt_item" href="">Kökssystem</a></li>
 
-                <li><a class="produkt_item" href="">Köksskåpsinredning</a></li>
+                <li><a class="produkt_item" href="">Bänkskivor</a></li>
 
                 <li><a class="produkt_item" href="">Vitvaror</a></li>
                 </ul>
