bättre bilder, original bild, små grejer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!-- Kanske ändra på hamburgarmenyn. Fullscreen? Kanske även lägger footer i hamburgarmenyn när den är i fullscreen. -->
-<!-- Fixa hamburgarmenyn för mobilsidan. kundservice får inte plats. Kanske därför är det bättre att bara ha det i fullscreen. -->
-<!-- Ändra på layouten förtexten i index känns lite som att den är där bara för att -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width">
     <title>Laque</title>
     <link rel="stylesheet" href="css/style.css">
@@ -33,7 +29,7 @@
     </nav>
     <main>
         <div class="inner_grid_index">
-            <article id="info_index"><h2>Välkommen</h2><p>Laque erbjuder högsta kvaliten av möbler. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci assumenda ipsa praesentium magnam quisquam cupiditate quam eaque explicabo necessitatibus porro vero aliquam blanditiis veritatis molestiae sit temporibus, iusto beatae dicta.</p></article>
+            <article id="info_index"><h2>Välkommen</h2></article>
             <section id="nyheter"><h2>Nyheter</h2>
                 <div class="produkter_index">
                     <div class="produkt_index_bild_1"><img src="img/ny_produkt_1.jpg" alt="En röd sofa med en gul kudde på den"></div>
