--- a/kok.html
+++ b/kok.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width">
     <title>Laque - Kök</title>
     <link rel="stylesheet" href="css/style.css">
@@ -30,11 +29,9 @@
     </nav>
     <main>
         <div class="inner_grid_produkter">
-            <!-- Vad ska jag kalla klasserna för kök menyn och när ska man använda  -->
-            <!-- Hur fungerar listor som inte är på nav-taggen -->
             <div class="produkt_meny">
                 <ul class="produkt_list">
-                <li><a class="produkt_item" href="">Kökssystem</a></li>
+                <li><a class="produkt_item" href="">Utrustning</a></li>
 
                 <li><a class="produkt_item" href="">Bänkskivor</a></li>
 
@@ -42,21 +39,21 @@
                 </ul>
             </div>
 
-            <section class="produkt_list_item1">Köksutrustning</section>
+            <section class="produkt_list_item1"><a href=""><h3>Utrustning</h3><img src="img/utrustning.jpg" alt="Köksutrustning"></a></section>
 
-            <section class="produkt_list_item2">Köksskåpsinredning</section>
+            <section class="produkt_list_item2"><a href=""><h3>Bänkskivor</h3><img src="img/bankskivor.jpg" alt="En bänkskiva gjord av trä"></a></section>
 
-            <section class="produkt_list_item3">Vitvaror</section>
+            <section class="produkt_list_item3"><a href=""><h3>Vitvaror</h3><img src="img/vit_varor.jpg" alt="En spis"></a></section>
 
             <section class="produkt_1">
-                <a href="k_produkt_1.html"><h2>Produkt 1</h2><img src="img/kok_produkt.jpg" alt="En diskbänk åt vänster med två ungnar i mitten och ett bord åt höger"></a>
+                <a href="k_produkt_1.html"><h2>Bruna stolar</h2><img src="img/kok_produkt.jpg" alt="En vit Köksbord med fyra bruna stolar framför"></a>
                 
             </section>
             <section class="produkt_2">
-                <a href="k_produkt_2.html"><h2>Produkt 2</h2> <img src="img/kok_produkt_2.jpg" alt="En hylla för köksredskap eller tallrikar"></a>
+                <a href="k_produkt_2.html"><h2>Vit köksbord</h2> <img src="img/kok_produkt_2.jpg" alt="En vit köksbord åt höger och en spis och diskbänk i miten"></a>
             </section>
             <section class="produkt_3">
-                <a href="k_produkt_3.html"><h2>Produkt 3</h2><img src="img/kok_produkt_3.jpg" alt="Ett bord med svart stolar runtom"></a>
+                <a href="k_produkt_3.html"><h2>Köksbord</h2><img src="img/kok_produkt_3.jpg" alt="En vit kök med ett bord i mitten och framför diskbänk,spis, hyllor etc."></a>
             </section>
         </div>
     </main>
@@ -69,7 +66,7 @@
          </ul>
  
          <ul class="footer_list">
-             <li ><a class="footer_item"href="om_oss.html">Om oss</a></li>
+             <li><a class="footer_item" href="om_oss.html">Om oss</a></li>
              <li><a class="footer_item" href="">Butiker</a></li>
              <li><a class="footer_item" href="">COVID-19</a></li>
          </ul>
