--- a/vardagsrum.html
+++ b/vardagsrum.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width">
     <title>Laque - Vardagsrum</title>
     <link rel="stylesheet" href="css/style.css">
@@ -31,30 +30,29 @@
     <main>
         <div class="inner_grid">
             <div class="inner_grid_produkter">
-                <!-- Kanske ta bort denna listan för desktop versionen och skapa en layout av 3 grids med bilder och text likt alla andra grids. -->
                 <div class="produkt_meny">
                     <ul class="produkt_list">
                         <li><a class="produkt_item" href="">Soffor</a></li>
-                        <li><a class="produkt_item" href="">Inredning</a></li>
+                        <li><a class="produkt_item" href="">Soffbord</a></li>
                         <li><a class="produkt_item" href="">Hyllor</a></li>
                     </ul>
                 </div>
 
-                <section class="produkt_list_item1">Soffor</section>
+                <section class="produkt_list_item1"><a href=""><h3>Soffor</h3><img src="img/soffor.jpg" alt="En brun soffa"></a></section>
 
-                <section class="produkt_list_item2">Inredning</section>
+                <section class="produkt_list_item2"><a href=""><h3>Soffbord</h3><img src="img/soffbord.jpg" alt="En bord gjord av trä"></a></section>
 
-                <section class="produkt_list_item3">Hyllor</section>
+                <section class="produkt_list_item3"><a href=""><h3>Hyllor</h3><img src="img/hyllor.jpg" alt="En hylla av trä"></a></section>
 
                 <section class="produkt_1">
-                    <a href="v_produkt_1.html"><h2>Produkt 1</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
+                    <a href="v_produkt_1.html"><h2>Grå soffa</h2><img src="img/vardagsrum_produkt_soffa.jpg" alt="En grå soffa med kuddar med olika färger på den"></a>
                 </section>
                 <section class="produkt_2">
-                    <a href="v_produkt_2.html"><h2>Produkt 2</h2><img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En vit grå soffa med vit, gråa kuddar."></a>
+                    <a href="v_produkt_2.html"><h2>Grå soffa 2</h2><img src="img/vardagsrum_produkt_soffa_2.jpg" alt="En grå soffa åt vänster och en i mitten mellan dem är en rund glasbord"></a>
                     
                 </section>
                 <section class="produkt_3">
-                    <a href="v_produkt_3.html"><h2>Produkt3</h2><img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa"></a>
+                    <a href="v_produkt_3.html"><h2>Svart soffa</h2><img src="img/vardagsrum_produkt_soffa_3.jpg" alt="En svart soffa"></a>
                     
                 </section>
             </div>
